apidoc/1.4.1/_sources/arcgis.mapping.rst.txt
arcgis.mapping module
=================

.. automodule:: arcgis.mapping

WebMap
-----------------
.. autoclass:: arcgis.mapping.WebMap
    :members:
    :undoc-members:
    :show-inheritance:

OfflineMapAreaManager
-----------------------
.. autoclass:: arcgis.mapping.OfflineMapAreaManager
    :members:
    :undoc-members:
    :show-inheritance:

WebScene
-------------------
.. autoclass:: arcgis.mapping.WebScene
    :members:
    :undoc-members:
    :show-inheritance:

MapImageLayer
-----------------
.. autoclass:: arcgis.mapping.MapImageLayer
    :members:
    :undoc-members:
    :show-inheritance:

MapImageLayerManager
-------------------
.. autoclass:: arcgis.mapping.MapImageLayerManager
    :members:
    :undoc-members:
    :show-inheritance:

VectorTileLayer
------------------
.. autoclass:: arcgis.mapping.VectorTileLayer
    :members:
    :undoc-members:
    :show-inheritance:

export_map
------------
.. automethod:: arcgis.mapping.export_map
    
get_layout_templates
-----------
.. automethod:: arcgis.mapping.get_layout_templates
